--- a/site/style.css
+++ b/site/style.css
@@ -22,7 +22,7 @@
 .question_field {
     width: 586px;
     height: 42px;
-    padding: 12px;
+    padding: 8px;
     font-size: 16px;
 }
 
@@ -33,6 +33,22 @@
 .question_field:focus {
     border: 1px solid rgb(73, 141, 255);
     outline: none;
+}
+
+.question_field::-webkit-input-placeholder {
+   text-align: center;
+}
+
+.question_field:-moz-placeholder { /* Firefox 18- */
+   text-align: center;  
+}
+
+.question_field::-moz-placeholder {  /* Firefox 19+ */
+   text-align: center;  
+}
+
+.question_field:-ms-input-placeholder {  
+   text-align: center; 
 }
 
 .button_container {
