--- a/site/style.css
+++ b/site/style.css
@@ -192,10 +192,17 @@
     padding: 4px;
 }
 
+.question_lamp {
+    position: absolute;
+    left: -90px;
+    top: -25px;
+}
+
 .question {
     width: 100%;
     text-align: left;
     margin: 14px 0px;
+    position: relative;
     /*height: 100px;*/
     /*display: flex;*/
     /*flex-flow: row nowrap;*/
