--- a/site/style.css
+++ b/site/style.css
@@ -20,10 +20,14 @@
 }
 
 .question_field {
-    width: 586px;
+    width: 100%;
     height: 42px;
     padding: 8px;
     font-size: 16px;
+}
+
+.question_field_box {
+    width: 586px;
 }
 
 .question_field:hover {
@@ -62,6 +66,7 @@
     line-height: 40px;
     text-align: center;
     margin: 32px 5px 32px 5px;
+    padding: 0px 6px;
     background: rgb(242, 242, 242);
     font-family: arial,sans-serif;
     font-size: 13px;
@@ -69,6 +74,7 @@
     color: rgb(117, 117, 117);
     cursor: pointer;
     border-radius: 2px;
+    white-space: nowrap;
 }
 
 .button:hover {
@@ -112,8 +118,8 @@
 
 .centralizer_inner {
     display: inline-block;
-    width: 960px;
-    /*border: 1px solid black;*/
+    width: 100%;
+    max-width: 840px;
 }
 
 
