--- a/site/style.css
+++ b/site/style.css
@@ -280,3 +280,16 @@
     outline: none;
 }
 
+
+
+.answering_question_title {
+    font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+    border-bottom: 1px solid #E4E6E8;
+    color: rgb(36, 39, 41);
+    font-size: 24px;
+    text-align: left;
+    margin-bottom: 6px;
+    padding: 2px;
+    /*padding-bottom: 30px;*/
+}
+
