--- a/site/style.css
+++ b/site/style.css
@@ -279,12 +279,8 @@
     border: 1px solid rgb(73, 141, 255);
     outline: none;
 }
-
-
-
-.answering_question_title {
+.answering_question {
     font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
-    border-bottom: 1px solid #E4E6E8;
     color: rgb(36, 39, 41);
     font-size: 24px;
     text-align: left;
@@ -293,3 +289,25 @@
     /*padding-bottom: 30px;*/
 }
 
+.answering_question_clock {
+    display: inline-block;
+    /*border: 1px solid black;*/
+    vertical-align: middle;
+    padding-right: 8px;
+}
+
+.answering_question_clock_icon {
+    width: 46px;
+}
+
+.answering_question_text {
+    /*border: 1px solid black;*/
+    display: inline-block;
+    width: calc(100% - 60px);
+    text-align: justify;
+    text-justify: inter-word;
+    vertical-align: middle;
+}
+
+.answering_question {
+}
